--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,17 +8,25 @@
     android:orientation="vertical"
     tools:context="com.developers.telelove.ui.SplashActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/splash_image"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="15dp"
+        android:text="@string/app_name"
+        android:textColor="@android:color/white"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
-    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+    <ImageView
         android:id="@+id/splash_image"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:background="@android:color/white"
-        android:src="@drawable/ic_live_tv_black_36dp"
-        app:civ_border_color="#FF000000"
-        app:civ_border_width="2dp" />
+        android:layout_margin="15dp"
+        app:srcCompat="@drawable/ic_tv" />
 
     <ProgressBar
         android:id="@+id/splash_progress_bar"
@@ -25,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/splash_image"
         android:layout_centerHorizontal="true"
-        android:layout_margin="5dp"/>
+        android:layout_margin="5dp" />
 
 
 </RelativeLayout>
