--- a/app/src/main/res/layout/item_load.xml
+++ b/app/src/main/res/layout/item_load.xml
@@ -6,9 +6,20 @@
 
 
     <ProgressBar
+        android:id="@+id/paged_progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="3dp" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/sync_fb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="3dp"
+        android:elevation="6dp"
+        android:src="@drawable/ic_sync_white_24dp"
+        android:visibility="gone" />
 
 </LinearLayout>
