--- a/app/src/main/res/layout/detail_layout.xml
+++ b/app/src/main/res/layout/detail_layout.xml
@@ -86,7 +86,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:layout_marginStart="4dp"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@android:color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/favorite_material_button"
         tools:text="This is the overview of this show" />
@@ -94,6 +94,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/recycler_view_container"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/overview_text_view">
 
