--- a/app/src/main/res/layout/detail_layout.xml
+++ b/app/src/main/res/layout/detail_layout.xml
@@ -1,115 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <FrameLayout
-        android:id="@+id/poster_image_view_container"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="parent">
+        android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/poster_image_view"
+
+        <FrameLayout
+            android:id="@+id/poster_image_view_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:contentDescription="@string/description_detail_poster" />
+            android:layout_margin="5dp">
 
-        <ProgressBar
-            android:id="@+id/progress_poster"
-            android:layout_width="wrap_content"
+            <ImageView
+                android:id="@+id/poster_image_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:contentDescription="@string/description_detail_poster" />
+
+            <ProgressBar
+                android:id="@+id/progress_poster"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center" />
+
+        </FrameLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center" />
-    </FrameLayout>
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/title_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="5dp"
-        android:fontFamily="sans-serif"
-        android:textColor="@color/colorPrimary"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@id/poster_image_view_container"
-        app:layout_constraintTop_toBottomOf="parent"
-        tools:text="Friends" />
+            <TextView
+                android:id="@+id/title_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="5dp"
+                android:fontFamily="sans-serif"
+                android:textColor="@color/colorPrimary"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                tools:text="Friends" />
 
-    <TextView
-        android:id="@+id/rating_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:textColor="@color/colorPrimary"
-        android:textSize="15sp"
-        app:layout_constraintStart_toEndOf="@id/poster_image_view_container"
-        app:layout_constraintTop_toBottomOf="@+id/title_text_view"
-        tools:text="Rating: 9.5" />
+            <TextView
+                android:id="@+id/rating_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:textColor="@color/colorPrimary"
+                android:textSize="15sp"
+                tools:text="Rating: 9.5" />
 
-    <TextView
-        android:id="@+id/add_to_favorite_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:text="@string/add_favorites_text"
-        android:textColor="@color/colorPrimary"
-        android:textSize="15sp"
-        app:layout_constraintStart_toEndOf="@id/poster_image_view_container"
-        app:layout_constraintTop_toBottomOf="@+id/rating_text_view"
-        tools:text="Add to Favorites: " />
+            <TextView
+                android:id="@+id/add_to_favorite_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:text="@string/add_favorites_text"
+                android:textColor="@color/colorPrimary"
+                android:textSize="15sp"
+                tools:text="Add to Favorites: " />
 
-    <com.github.ivbaranov.mfb.MaterialFavoriteButton
-        android:id="@+id/favorite_material_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="5dp"
-        app:layout_constraintStart_toEndOf="@id/poster_image_view_container"
-        app:layout_constraintTop_toBottomOf="@id/add_to_favorite_text"
-        app:mfb_animate_favorite="true"
-        app:mfb_animate_unfavorite="false"
-        app:mfb_bounce_duration="300"
-        app:mfb_color="black"
-        app:mfb_rotation_angle="360"
-        app:mfb_rotation_duration="400"
-        app:mfb_type="star" />
+            <com.github.ivbaranov.mfb.MaterialFavoriteButton
+                android:id="@+id/favorite_material_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="5dp"
+                app:mfb_animate_favorite="true"
+                app:mfb_animate_unfavorite="false"
+                app:mfb_bounce_duration="300"
+                app:mfb_color="black"
+                app:mfb_rotation_angle="360"
+                app:mfb_rotation_duration="400"
+                app:mfb_type="star" />
+        </LinearLayout>
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/overview_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="4dp"
+        android:layout_marginTop="5dp"
         android:textColor="@android:color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/favorite_material_button"
         tools:text="This is the overview of this show" />
 
+
     <LinearLayout
+        android:id="@+id/recycler_view_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/recycler_view_container"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/overview_text_view">
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:fontFamily="serif"
+            android:text="@string/character_text"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            tools:text="Characters:" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/character_recycler_view"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1" />
 
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:fontFamily="serif"
+            android:text="@string/similar_shows_text"
+            android:textColor="@android:color/black"
+            android:textSize="15sp"
+            tools:text="Similar Shows:" />
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/similar_shows_recycler_view"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1" />
     </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
