--- a/app/src/main/res/layout/character_list.xml
+++ b/app/src/main/res/layout/character_list.xml
@@ -2,8 +2,9 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent"
+    android:id="@+id/card_view"
+    android:layout_width="180dp"
+    android:layout_height="180dp"
     android:layout_margin="3dp"
     app:cardCornerRadius="@dimen/cardview_default_radius"
     app:cardElevation="@dimen/cardview_default_elevation">
@@ -14,13 +15,16 @@
         android:orientation="vertical">
 
         <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1">
 
             <ImageView
                 android:id="@+id/character_image_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_gravity="center" />
 
             <ProgressBar
@@ -35,11 +39,12 @@
             android:id="@+id/char_name_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center"
-            android:layout_margin="2dp"
-            android:textColor="@android:color/black"
+            android:layout_gravity="center"
+            android:layout_margin="3dp"
+            android:maxLines="2"
+            android:textColor="@android:color/white"
             android:textSize="15sp"
-            tools:text="Pennny Penn" />
+            tools:text="Penny Penn" />
 
     </LinearLayout>
 
