--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.developers.telelove.ui.MainActivity">
+    tools:context="com.developers.telelove.ui.activities.MainActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolBar"
