--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
     android:orientation="vertical"
-    tools:context="com.developers.telelove.ui.SplashActivity">
+    tools:context="com.developers.telelove.ui.activities.SplashActivity">
 
     <TextView
         android:layout_width="wrap_content"
