--- a/app/src/main/res/layout/activity_quote_display.xml
+++ b/app/src/main/res/layout/activity_quote_display.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:layout_margin="5dp"
         android:textColor="@android:color/black"
         android:textSize="20sp"
         tools:text="I am here like everyone." />
