--- a/app/src/main/res/layout/show_widget_provider.xml
+++ b/app/src/main/res/layout/show_widget_provider.xml
@@ -6,16 +6,20 @@
     android:orientation="horizontal"
     android:padding="@dimen/widget_margin">
 
+
     <ImageView
         android:id="@+id/poster_image_widget"
         android:layout_width="140dp"
         android:layout_height="170dp"
+        android:layout_gravity="center"
         android:layout_margin="3dp"
+        android:layout_marginStart="15dp"
         android:scaleType="centerCrop" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:orientation="vertical">
 
         <TextView
