--- a/app/src/main/res/xml/show_widget_provider_info.xml
+++ b/app/src/main/res/xml/show_widget_provider_info.xml
@@ -4,7 +4,7 @@
     android:initialLayout="@layout/show_widget_provider"
     android:minHeight="180dp"
     android:minWidth="250dp"
-    android:previewImage="@drawable/example_appwidget_preview"
+    android:previewImage="@drawable/tv_red"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="86400000"
     android:widgetCategory="home_screen"/>
