--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -35,6 +35,7 @@
                 android:fitsSystemWindows="true" />
 
             <ImageView
+                android:id="@+id/play_button_trailer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -46,8 +47,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="parallax"
-                app:theme="@style/ToolBarStyle"
-                app:popupTheme="@style/AppTheme" />
+                app:popupTheme="@style/AppTheme"
+                app:theme="@style/ToolBarStyle" />
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
