--- a/app/src/main/res/layout/activity_quote_display.xml
+++ b/app/src/main/res/layout/activity_quote_display.xml
@@ -36,6 +36,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="15dp"
         android:layout_marginEnd="15dp"
+        android:contentDescription="@string/share_quote_desc"
         android:elevation="6dp"
         android:src="@drawable/ic_share_white_24dp" />
 </RelativeLayout>
